--- a/Desktop/合作團隊/合作團隊成員.html
+++ b/Desktop/合作團隊/合作團隊成員.html
@@ -1,7 +1,7 @@
 <div class="collaborative-partner-member-container">
     <h1 class="w-100 text-center collaborative-partner-member-title">團 隊 成 員</h1>
     <div id="collaborativePartnerMemberContentContainer" class="w-100">
-        <div id="collaborativePartnerMemberContentWrapper" class="row text-center justify-content-around"></div>
+        <div id="collaborativePartnerMemberContentWrapper" class="row text-center"></div>
     </div>
 </div>
 
