--- a/Utils/頁面通用CSS.html
+++ b/Utils/頁面通用CSS.html
@@ -1,7 +1,13 @@
 <!-- 全頁面通用 CSS -->
 <style>
+    html,
     body {
+        font-family: 'SegoeUI', 'Noto Sans TC';
         background: white !important;
+    }
+
+    .swal2-popup {
+        font-size: 16px !important;
     }
 
     h1 {
