--- a/DB/實踐成果_場域地圖.html
+++ b/DB/實踐成果_場域地圖.html
@@ -107,8 +107,8 @@
             location: '台北',
             labelType: 0,
             position: [1, 83],
-            iconUrl: '',
-            iconPosition: [],
+            iconUrl: 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/usr_logo_black(small).png',
+            iconPosition: [15, 5],
         },
     ];
 </script>
