--- a/Desktop/實踐成果/場域地圖.html
+++ b/Desktop/實踐成果/場域地圖.html
@@ -15,7 +15,8 @@
             <p id="activityRegionContent">北科 社會責任辦公室</p>
             <p id="activityRegionContentDate">Since 2018</p>
         </div>
-        <img id="activityRegionIcon" alt="計畫圖片" class="d-none">
+        <img id="activityRegionIcon" alt="計畫圖片"
+            src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/usr_logo_black(small).png">
     </div>
     <div>
         <div id="cloneTemplate" class="d-none">
@@ -116,6 +117,8 @@
 
     #activityRegionIcon {
         position: absolute;
+        bottom: 15%;
+        left: 5%;
     }
 
     .rectangle {
