--- a/Desktop/頁首.html
+++ b/Desktop/頁首.html
@@ -69,6 +69,11 @@
         background-color: rgba(73, 152, 178, 0.56) !important;
     }
 
+    .dropdown-item:hover {
+        background-color: rgba(73, 152, 178, 0.56);
+        color: #f8f9fa;
+    }
+
     /* Zoom */
     @media (min-width: 1200px) and (max-width: 1800px) {
         #navLogoImage {
