修正 校內下載 word > odt

--- a/DB/校內下載.html
+++ b/DB/校內下載.html
@@ -4,7 +4,7 @@
 
     /**
       * 使用方式 上至下為新到舊
-      * 檔案種類: PDF(0), WORD(1), EXCEL(2), PPT(3), FILE(4)
+      * 檔案種類: ODT(0), PDF(1), WORD(2), EXCEL(3), PPT(4), FILE(5)
       * date 與 title 為必填，fileLink 與 fileType 為 選填
       * 預覽圖: https://osausr.ntut.edu.tw/var/file/1/1001/img/3384/134977924.png
     */
@@ -12,38 +12,26 @@
         {
             'date': '2020-11-30',
             'title': '北科大_USR Hub 期末報告_計畫名稱',
-            'fileLink': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3374/595345506.docx',
-            'fileType': 1,
-        },
-        {
-            'date': '2020-11-30',
-            'title': 'USR計畫資料收集表單(109年01月至12月)_計畫名稱',
-            'fileLink': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3374/407522916.xlsx',
-            'fileType': 2,
+            'fileLink': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3374/615756054.odt',
+            'fileType': 0,
         },
         {
             'date': '2020-11-12',
             'title': '110年度USR種子計畫徵件辦法',
             'fileLink': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3374/362298183.pdf',
-            'fileType': 0,
+            'fileType': 1,
         },
         {
             'date': '2020-11-12',
             'title': '110年度USR種子計畫徵件辦法_附件_計劃書格式',
-            'fileLink': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3374/881218344.docx',
-            'fileType': 1,
+            'fileLink': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3374/863736867.odt',
+            'fileType': 0,
         },
         {
             'date': '2020-11-12',
             'title': '109年北科大USR Hub期中報告【USR Hub 期中報告_計畫名稱】格式',
-            'fileLink': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3374/628391463.docx',
-            'fileType': 1,
-        },
-        {
-            'date': '2020-11-12',
-            'title': '109年北科大USR Hub期中報告【USR計畫資料收集表單_計畫名稱】格式',
-            'fileLink': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3374/857162777.xlsx',
-            'fileType': 2,
+            'fileLink': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3374/510497131.odt',
+            'fileType': 0,
         },
     ]
 </script>
