--- a/Desktop/合作團隊/合作團隊主題.html
+++ b/Desktop/合作團隊/合作團隊主題.html
@@ -3,7 +3,8 @@
         <h1 id="collaborativePartnerBackgroundContentSubTitle"></h1>
         <hr id="collaborativePartnerBackgroundContentHr">
         <h1 id="collaborativePartnerBackgroundContentTitle" class="animate__animated animate__jello"></h1>
-        <a id="collaborativePartnerBackgroundContentButtonLink" class="text-decoration-none">
+        <a id="collaborativePartnerBackgroundContentButtonLink" class="text-decoration-none" target="_blank"
+            rel="noreferrer noopener">
             <span id="collaborativePartnerBackgroundContentButton" class="text-center">計畫網站</span>
         </a>
     </div>
