--- a/Desktop/合作團隊/合作團隊複製用模板.html
+++ b/Desktop/合作團隊/合作團隊複製用模板.html
@@ -13,7 +13,8 @@
     <img alt="SDGs" class="sdg-icon sdg-icon-template" data-aos="flip-up" />
 
     <!-- 亮點成果 -->
-    <div class="collaborative-partner-highlight-content-container row" data-aos="flip-left" data-aos-duration="1000">
+    <div class="collaborative-partner-highlight-content-container row" data-aos="zoom-in-right"
+        data-aos-duration="1000">
         <div class="col-12 col-lg-5 d-flex justify-content-center collaborative-partner-highlight-content-image">
         </div>
         <div class="col-12 col-lg-7 mt-5 mt-lg-0 p-0">
