計畫成果改使用 DB

--- a/Desktop/實踐成果/實踐成果複製用模板.html
+++ b/Desktop/實踐成果/實踐成果複製用模板.html
@@ -1,4 +1,5 @@
 <div id="template" class="d-none">
+    <!-- 年度專刊 -->
     <div class="col-md-4 book-wrapper" style="cursor: pointer;">
         <div class="d-flex flex-column">
             <div class="p-2">
@@ -14,5 +15,16 @@
     </div>
     <div class="paginate">
         <span></span>
+    </div>
+    <!-- 計畫成果 -->
+    <div class="project-content-container content-container row">
+        <div class="d-flex flex-column col-12 col-xl-11">
+            <div class="images-container d-flex align-items-end">
+            </div>
+            <div>
+                <p class="content-title"></p>
+                <p class="content-description ellipsis-line-4"></p>
+            </div>
+        </div>
     </div>
 </div>
