--- a/Desktop/實踐成果/計畫成果.html
+++ b/Desktop/實踐成果/計畫成果.html
@@ -1,122 +1,17 @@
-<div id="projectResultsContainer">
-    <h1 id="projectResultsTitle" class="w-100 text-center animate__animated animate__jello">計 畫 成 果</h1>
-    <div class="container-container">
-        <div class="content-item-container" data-aos="fade-right">
-            <div class="row">
-                <div class="col-lg-8">
-                    <div class="d-flex flex-row">
-                        <div class="p-2">
-                            <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/322929631.png" alt="成果照片"
-                                class="rounded">
-                        </div>
-                        <div class="p-2">
-                            <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/488006064.png" alt="成果照片"
-                                class="rounded">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <a href="https://osausr.ntut.edu.tw/p/426-1001-36.php?Lang=zh-tw">
-                        <i class="fas fa-arrow-right text-more text-more-odd">
-                            <span style="font-family: Arial; font-weight: normal;"> MORE</span>
-                        </i>
-                    </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-10">
-                    <p class="content-title">原住民安居構築與綠色樂業推動計畫</p>
-                </div>
-                <div class="col-lg-2"></div>
-                <div class="col-lg-10">
-                    <p class="comtent-text ellipsis-line-4">在新竹縣尖石鄉海拔 1200 公尺至1600公尺森林山區,後山的農村部落裡,維持著非常
-                        良好景觀及自然資源族人多為泰雅族群從事農耕生活,致力於推廣內涵泰雅智慧的自然
-                        友善農業。但因為過去社群組織停頓、山地理、交通運輸及資源不足等限制,產業的維
-                        持及生活文化受到各種現實考驗...</p>
-                </div>
-                <div class="col-lg-2"></div>
-            </div>
-        </div>
-        <div class="content-item-container" data-aos="fade-left">
-            <div class="row">
-                <div class="col-lg-4">
-                    <a href="https://osausr.ntut.edu.tw/p/426-1001-36.php?Lang=zh-tw">
-                        <i class="fas fa-arrow-right text-more text-more-even">
-                            <span style="font-family: Arial; font-weight: normal;"> MORE</span>
-                        </i>
-                    </a>
-                </div>
-                <div class="col-lg-8">
-                    <div class="d-flex flex-row">
-                        <div class="p-2">
-                            <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/368922643.png" alt="成果照片"
-                                class="rounded">
-                        </div>
-                        <div class="p-2">
-                            <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/722985209.png" alt="成果照片"
-                                class="rounded">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-2"></div>
-                <div class="col-lg-10">
-                    <p class="content-title">在地「富育」計畫 - 牡丹鄉</p>
-                </div>
-                <div class="col-lg-2"></div>
-                <div class="col-lg-10">
-                    <p class="comtent-text ellipsis-line-4">在地富育計畫乃針對屏東縣牡丹鄉學童、青少年、青壯年與長者的全方位照顧方案。服
-                        務內容在教育面以人為中心思考，提供各階層教育需求；在文化面著重排灣族文化傳
-                        承與發揚；在安養面以協助當地就業與獨居長者照顧為核心；在自然面是盤整當地植
-                        物與農特產品，做為整體經濟規劃基礎。為圓滿此計畫在校內推動「專業課程融入服務
-                        學習」，透過專業整合，將師生投入偏鄉服務，配合企業資源引進，讓學校、偏鄉與企
-                        業之結合成為成功之模式。</p>
-                </div>
-            </div>
-        </div>
-        <div class="content-item-container" data-aos="fade-right">
-            <div class="row">
-                <div class="col-lg-8">
-                    <div class="d-flex flex-row">
-                        <div class="p-2">
-                            <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/322929631.png" alt="成果照片"
-                                class="rounded">
-                        </div>
-                        <div class="p-2">
-                            <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/488006064.png" alt="成果照片"
-                                class="rounded">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <a href="https://osausr.ntut.edu.tw/p/426-1001-36.php?Lang=zh-tw">
-                        <i class="fas fa-arrow-right text-more text-more-odd">
-                            <span style="font-family: Arial; font-weight: normal;"> MORE</span>
-                        </i>
-                    </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-10">
-                    <p class="content-title">原住民安居構築與綠色樂業推動計畫</p>
-                </div>
-                <div class="col-lg-2"></div>
-                <div class="col-lg-10">
-                    <p class="comtent-text ellipsis-line-4">在新竹縣尖石鄉海拔 1200 公尺至1600公尺森林山區,後山的農村部落裡,維持著非常
-                        良好景觀及自然資源族人多為泰雅族群從事農耕生活,致力於推廣內涵泰雅智慧的自然
-                        友善農業。但因為過去社群組織停頓、山地理、交通運輸及資源不足等限制,產業的維
-                        持及生活文化受到各種現實考驗...</p>
-                </div>
-                <div class="col-lg-2"></div>
-            </div>
-        </div>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+
+<div id="projectResultsContainer" class="bg-light">
+    <div class="container-fluid">
+        <h1 id="projectResultsTitle" class="w-100 text-center animate__animated animate__jello">計 畫 成 果</h1>
+
+        <div id="contentsContainer"></div>
     </div>
 </div>
 <style type="text/css">
     #projectResultsContainer {
-        position: relative;
-        width: 100vw;
+        padding: 0 10%;
     }
 
     #projectResultsTitle {
@@ -126,39 +21,35 @@
         margin: 145px 0px 70px;
     }
 
-    .content-item-container {
-        padding: 0 50px 123px;
+    .content-container {
+        margin-bottom: 123px;
     }
 
-    @media (min-width: 992px) {
-        .content-item-container {
-            padding: 0 100px 123px;
-        }
+    .images-container {
+        overflow-x: auto;
     }
 
-    @media (min-width: 1200px) {
-        .content-item-container {
-            padding: 0 200px 123px;
-        }
-    }
-
-    .text-more {
-        cursor: pointer;
+    .info-button {
+        width: 141px;
+        height: 43px;
+        margin: 0 64px;
+        padding: 8px 26px 8px 27px;
         font-size: 20px;
-        line-height: 1.15;
+        line-height: 1.35;
         letter-spacing: 2.4px;
+        text-decoration: none;
+        text-align: center;
         color: #707070;
-        padding: 10px 70px;
-        position: absolute;
-        bottom: 0;
+        background: none;
+        border: solid 1px #707070;
+        word-break: keep-all;
     }
 
-    .text-more-odd {
-        left: 0;
-    }
-
-    .text-more-even {
-        right: 0;
+    .info-button:hover {
+        background: #4998b2;
+        color: #fff;
+        border: 0px;
+        transition-timing-function: ease-out;
     }
 
     .content-title {
@@ -169,7 +60,7 @@
         color: #000000;
     }
 
-    .comtent-text {
+    .content-description {
         font-size: 30px;
         font-weight: normal;
         line-height: 1.67;
@@ -177,3 +68,32 @@
         color: #707070;
     }
 </style>
+<script>
+    $(function () {
+        if (!projectResult.length) { return }
+
+        for (let i = 0; i < projectResult.length; i++) {
+            const isEven = (i + 1) % 2 === 0;
+            const template = $('#template').find('.project-content-container').clone();
+            const imagesContainer = template.find('.images-container');
+            const infoButton = `<a class="info-button text-decoration-none" href=${projectResult[i].link}>更多資訊</a>`;
+            template.find('.content-title').text(projectResult[i].title);
+            template.find('.content-description').text(projectResult[i].description);
+
+            if (isEven) {
+                template.addClass('justify-content-end');
+                imagesContainer.append(infoButton);
+                projectResult[i].images.forEach(image => {
+                    imagesContainer.append(`<img src=${image} alt="成果照片" class="rounded mr-3">`);
+                });
+            } else {
+                projectResult[i].images.forEach(image => {
+                    imagesContainer.append(`<img src=${image} alt="成果照片" class="rounded mr-3">`);
+                });
+                imagesContainer.append(infoButton);
+            }
+
+            $('#contentsContainer').append(template);
+        }
+    })
+</script>
